# sales-market-discovery

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPUTATION_ENGINE.md  COMPUTATION_QUICKSTART.md  JUPYTER_QUICK_START.md  Makefile  README.md  TODO.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test-stealth-config.py
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: main.py
backend/routers/: audit.py  ebay_webhook.py  feedback.py  health.py  ingestion.py  listing_detail.py  pmn.py  scored_listings.py
docs/: ARCHITECTURE.md  BUSINESS_ROADMAP.md  action-plan-ebay-and-proxy.md  milestone-1-todo.md  plan-vinted-stealth-bypass.md
docs/superpowers/plans/: 2026-03-16-milestone2-fast-and-precise.md  2026-03-17-connector-data-quality-audit.md  2026-03-24-enriched-data-model.md
docs/superpowers/specs/: 2026-03-14-roadmap-objectives-kpis-design.md  2026-03-16-milestone2-fast-and-precise-design.md  2026-03-17-connector-data-quality-audit-design.md  2026-03-24-enriched-data-model-design.md  2026-07-01-recovery-to-first-1000-eur-design.md
infra/: backup.sh  deploy.sh  remote-deploy.sh  setup-vps.sh
infra/caddy/: Caddyfile
infra/docker/: Dockerfile.backend  Dockerfile.ingestion  Dockerfile.ui  start-ingestion.sh  start-jupyter.sh
infra/hooks/: pre-push
infra/systemd/: market-discovery.service
ingestion/: alert_engine.py  audit.py  audit_cli.py  composite_scoring.py  computation.py  constants.py  detail_fetch.py  enrichment.py  enrichment_prompt.py  filtering.py  ingestion.py  pricing.py  run_tracker.py  schemas.py  validation.py  worker.py
ingestion/connectors/: backmarket_connector.py  cdiscount_connector.py  ebay.py  fnac_connector.py  leboncoin.py  leboncoin_api.py  rakuten_connector.py  vinted.py  vinted_api.py
libs/ai/: gemini.py
libs/common/: condition.py  db.py  llm_service.py  log.py  models.py  scraping.py  screenshot_service.py  settings.py  telegram_service.py  utils.py
libs/notifications/: telegram.py
migrations/: env.py
migrations/versions/: 0001_init.py  0002_add_description_to_listings.py  0002_week1_foundations.py  0003_week2_confidence.py  0004_week3_pmn_history.py  0005_week4_profit_missing_data.py  0006_connector_audit.py  0007_enrichment_tables.py
notebooks/: README.md  scraping_experiments.ipynb
notebooks/.Trash-1001/info/: 0.trashinfo
notebooks/.ipynb_checkpoints/: scraping_experiments-checkpoint.ipynb
scripts/: seed.py  test-stealth-config.py  test-stealth.py  test_cdiscount_product_pages.py  test_computation.py  test_computation_simple.py  test_connector.py
tests/: conftest.py
tests/e2e/: test_app.py
tests/integration/: conftest.py  test_alert_pipeline.py  test_pmn_computation.py
tests/smoke/: conftest.py  test_01_container_health.py  test_02_connectors.py  test_03_ingestion_pipeline.py  test_04_data_quality.py  test_05_pmn_computation.py  test_06_detail_fetch.py  test_07_enrichment.py  test_08_composite_scoring.py
tests/unit/: test_audit.py  test_composite_scoring.py  test_computation.py  test_condition.py  test_confidence.py  test_connectors.py  test_detail_fetch.py  test_ebay_webhook.py  test_enrichment_prompt.py  test_filtering.py  test_health.py  test_pricing.py  test_scraping.py  test_stale.py  test_validation.py
ui/: app.py
ui/lib/: api.py  components.py  config.py  formatters.py  theme.py
ui/pages/: 0_Home.py  1_Discovery.py  2_Listing_Explorer.py  3_Product_Setup.py  4_Import_Data.py  5_Health.py  6_Alerts.py
