[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "market-discovery"
version = "0.1.0"
description = "Flip Market Discovery + PMN skeleton"
authors = [
  { name = "Guillaume Quinquet", email = "guillaume.quinquet@hotmail.fr" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
    "httpx>=0.27.0",
    "python-rapidjson>=1.18",
    "orjson>=3.10.7",
    "loguru>=0.7.2",
    "tenacity>=9.0.0",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "rapidfuzz>=3.9.6",
    "duckdb>=1.0.0",
    "pyarrow>=17.0.0",
    "redis>=5.0.7",
    "arq>=0.25.0",
    "python-telegram-bot>=21.4",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "streamlit>=1.37.1",
    "plotly>=5.23.0",
    "beautifulsoup4>=4.12.3",
    "cloudscraper>=1.2.71",
    "fake-useragent>=1.5.1",
    "playwright>=1.47.0",
    "patchright>=1.58.0",
    "lbc>=1.0.9",
    "google-genai>=1.67.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["libs*", "ingestion*", "backend*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "C90"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E712",   # == True/False — required for SQLAlchemy column comparisons
    "B008",   # Depends() in defaults — standard FastAPI pattern
    "C901",   # complexity — tracked but not blocking
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"libs/common/settings.py" = ["S105"]                          # dev default password
"libs/common/scraping.py" = ["S108", "S110", "S311", "E722"]  # temp dir, UA fallback, random
"ingestion/audit.py" = ["S108"]                                # Playwright persistent context temp dir
"ingestion/connectors/*" = ["S110", "S311"]                    # random delays, fallback patterns
"ui/app.py" = ["B007"]                                         # iterrows loop variable

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests requiring live services"]
addopts = "-m 'not e2e'"
